# zlm-mgw

./: .gitignore  CMakeLists.txt  configure  dockerfile
3rdpart/ZLToolKit/: .git_bak
3rdpart/jsoncpp/: .git_bak
3rdpart/media-server/: .git_bak
api/: CMakeLists.txt
api/include/: mk_mgw.h
api/source/: mk_mgw.cpp
bak.git/: FETCH_HEAD  ORIG_HEAD  config  index  packed-refs  shallow
bak.git/logs/: HEAD
bak.git/refs/: stash
conf/: config.ini
mgw/: CMakeLists.txt
mgw/core/: Defines.cpp  Defines.h  DomainSock.cpp  DomainSock.h  DomainSockPusher.cpp  DomainSockPusher.h  EventProcess.cpp  EventProcess.h  PlayHelper.cpp  PlayHelper.h  PushHelper.cpp  PushHelper.h  StreamAuth.cpp  StreamAuth.h  TrafficStatistics.cpp  TrafficStatistics.h  U727.cpp  U727.h  UcastDevice.cpp  UcastDevice.h  mk_mgw.cpp  mk_mgw.h
mgw/haivision-srt/: SrtClient.h  SrtPlayer.h  SrtSocket.h  SrtUtil.cpp  SrtUtil.h
mgw/message/: DeviceSession.cpp  Message.cpp  Message.h  MessageClient.cpp  MessageClient.h  MessageCodec.cpp  MessageCodec.h  MessageSession.cpp  MessageSession.h  U727Session.cpp  common.pb.cc  common.pb.h  device.pb.cc  device.pb.h  mgw.pb.cc  mgw.pb.h  u727.pb.cc  u727.pb.h
mgw/message/mgw_proto/: common.proto  device.proto  mgw.proto  u727.proto
server/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/Common/: MediaSource.cpp  MediaSource.h  MultiMediaSourceMuxer.cpp  MultiMediaSourceMuxer.h  config.cpp  config.h  macros.cpp  macros.h
src/Dmsp/: Dmsp.cpp  Dmsp.h  DmspCodec.h  DmspDemuxer.cpp  DmspDemuxer.h  (+10 more)
tests/: test_httpApi.cpp  test_server.cpp
(+99 files in other folders)
